// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #000 !important;
}
::slotted(select:focus) {
  outline-color: #626669 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
@media (min-width: 480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}

@media (min-width: 760px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 0.25rem;
  }
}

@media (min-width: 1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}

@media (min-width: 1300px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 0.25rem;
  }
}

@media (min-width: 1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #fc1717 !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #d30303 !important;
}
::slotted(select:focus) {
  outline-color: #fc1717 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #d30303 !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #fc1717;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #a30000 !important;
}
::slotted(select:focus) {
  outline-color: #e00000 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #b0b1b2 !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #e3e4e5 !important;
}
::slotted(select:focus) {
  outline-color: #b0b1b2 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])) {
  border-color: #fff !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #000 !important;
}
::slotted(select:focus) {
  outline-color: #626669 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #01ba1d !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #017d14 !important;
}
::slotted(select:focus) {
  outline-color: #01ba1d !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #017d14 !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #01ba1d;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #014d0c !important;
}
::slotted(select:focus) {
  outline-color: #018a16 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #fc1717 !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #d30303 !important;
}
::slotted(select:focus) {
  outline-color: #fc1717 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #d30303 !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #fc1717;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #a30000 !important;
}
::slotted(select:focus) {
  outline-color: #e00000 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #b0b1b2 !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #e3e4e5 !important;
}
::slotted(select:focus) {
  outline-color: #b0b1b2 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])) {
  border-color: #fff !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #000 !important;
}
::slotted(select:focus) {
  outline-color: #626669 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #01ba1d !important;
  border-radius: 0 !important;
  background-color: #0e1418 !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #017d14 !important;
}
::slotted(select:focus) {
  outline-color: #01ba1d !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #000 !important;
}
.root {
  display: block;
  position: relative;
  color: #fff;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #b0b1b2;
}
.label--disabled .label__text {
  color: #7c7f81;
}
.label--disabled .icon {
  color: #7c7f81;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #017d14 !important;
}
.required {
  user-select: none;
  color: #fc1717;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #01ba1d;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #fff;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success and theme: light 1`] = `
":host {
  display: block;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  height: 3rem !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:hover) {
  border-color: #014d0c !important;
}
::slotted(select:focus) {
  outline-color: #018a16 !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
  background: #fff !important;
}
.root {
  display: block;
  position: relative;
  color: #000;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label--disabled .label__text {
  color: #96989a;
}
.label--disabled .icon {
  color: #96989a;
  cursor: not-allowed;
}
.label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:hover:not(:disabled):not([readonly])), .icon:hover~::slotted(select:not(:disabled):not([readonly])), .icon:hover ::slotted(select:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #000;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-select-wrapper a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
p-select-wrapper[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
p-select-wrapper b, p-select-wrapper strong {
  font-weight: 700 !important;
}
p-select-wrapper em, p-select-wrapper i {
  font-style: normal !important;
}
p-select-wrapper a:hover {
  color: #d5001c !important;
}
p-select-wrapper a::-moz-focus-inner {
  border: 0 !important;
}
p-select-wrapper a:focus {
  outline-color: currentColor !important;
}
p-select-wrapper a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-select-wrapper a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
prefixed-p-select-wrapper[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
prefixed-p-select-wrapper b, prefixed-p-select-wrapper strong {
  font-weight: 700 !important;
}
prefixed-p-select-wrapper em, prefixed-p-select-wrapper i {
  font-style: normal !important;
}
prefixed-p-select-wrapper a:hover {
  color: #d5001c !important;
}
prefixed-p-select-wrapper a::-moz-focus-inner {
  border: 0 !important;
}
prefixed-p-select-wrapper a:focus {
  outline-color: currentColor !important;
}
prefixed-p-select-wrapper a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;
